style and image bugs

--- a/assets/index.html
+++ b/assets/index.html
@@ -76,7 +76,7 @@
     </div>
 
     <div class="why-image">
-      <img src="/img/bg/490890077_1239520721511437_7517650080220307172_n.jpg" alt="Maquinaria en obra">
+      <img src="img/bg/490890077_1239520721511437_7517650080220307172_n.jpg" alt="Maquinaria en obra">
     </div>
   </div>
 </section>
@@ -97,7 +97,7 @@
     <div class="slider">
       
       <div class="slide-card" id="slide-1">
-        <img src="/img/bg/galerias.jpg" alt="Plaza Galerías MTY contrató nuestros servicios.">
+        <img src="img/bg/galerias.jpg" alt="Plaza Galerías MTY contrató nuestros servicios.">
         <div class="overlay">
           <h4>Plaza Galerías</h4>
           <p>Servicio a Plaza Galeríaz, Monterrey. Brazo de 60 piez electrico.</p>
@@ -106,7 +106,7 @@
       </div>
 
       <div class="slide-card" id="slide-2">
-        <img src="/img/bg/walm.jpg" alt="Sucursal Walmart contrató nuestros servicios.">
+        <img src="img/bg/walm.jpg" alt="Sucursal Walmart contrató nuestros servicios.">
         <div class="overlay">
           <h4>Walmart, Huinala NL</h4>
           <p>Maniobra en Walmart.</p>
@@ -115,7 +115,7 @@
       </div>
 
       <div class="slide-card" id="slide-3">
-        <img src="/img/bg/sanpedro.png" alt="Fashion Drive contrató nuestros servicios.">
+        <img src="img/bg/sanpedro.png" alt="Fashion Drive contrató nuestros servicios.">
         <div class="overlay">
           <h4>Fashion Drive</h4>
           <p>Fashion Drive, San Pedro Garza García.</p>
@@ -124,7 +124,7 @@
       </div>
 
         <div class="slide-card" id="slide-4">
-        <img src="/img/bg/proyectoos.jpg" alt="Fashion Drive contrató nuestros servicios.">
+        <img src="img/bg/proyectoos.jpg" alt="Fashion Drive contrató nuestros servicios.">
         <div class="overlay">
           <h4>Mucho más...</h4>
           <p>American Solutions Group..</p>
@@ -154,7 +154,7 @@
 
     <div class="clients-logos">
       <div class="logo-box">
-        <img src="/img/bg/romperenta.jpg" alt="RompeRenta.png">
+        <img src="img/bg/romperenta.jpg" alt="RompeRenta.png">
       </div>
       
     </div>
