--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
   <!-- Header -->
   <header class="site-header">
-
     <div class="container nav-container">
       <nav class="nav-links">
         <a href="index.html">Home</a>
@@ -25,7 +24,7 @@
   <!-- Hero -->
   <section class="hero" id="inicio">
     <div class="hero-text">
-      <h1>Renta de maquinaria para construcción en Monterrey.</h1>
+      <h1>American Solutions Group - Maquinaria de construcción en Monterrey.</h1>
       <p>Renta de maquinaria ligera y de elevación en Monterrey, Nuevo León.</p>
       <p>Más de dos años de experiencia, excelencia garantizada.</p>
     </div>
@@ -89,8 +88,8 @@
 <!-- Galería de productos -->
 <section id="proyectos" class="contenedor">
   <div class="gallery-text">
-    <h3>Proyectos que han confiado en American Solutions.</h3>
-    <p>Marcas y empresas que respaldan nuestra experiencia.</p>
+    <h3>Hecha un vistazo <span>...</span></h3>
+    <p>Empresas como RompeRenta, constructoras locales, confían en American Solutions Group. ¡Esperamos agregarte a la lista!</p>
   </div>
 
   <div class="slider-wrapper">
@@ -100,7 +99,7 @@
         <img src="img/bg/galerias.jpg" alt="Plaza Galerías MTY contrató nuestros servicios.">
         <div class="overlay">
           <h4>Plaza Galerías</h4>
-          <p>Servicio a Plaza Galeríaz, Monterrey. Brazo de 60 piez electrico.</p>
+          <p>Servicio a Plaza Galerías, Monterrey. Brazo de 60 pies eléctrico.</p>
           <span class="fecha">Octubre 2020</span>
         </div>
       </div>
@@ -108,7 +107,7 @@
       <div class="slide-card" id="slide-2">
         <img src="img/bg/walm.jpg" alt="Sucursal Walmart contrató nuestros servicios.">
         <div class="overlay">
-          <h4>Walmart, Huinala NL</h4>
+          <h4>Walmart, Huinalá NL</h4>
           <p>Maniobra en Walmart.</p>
           <span class="fecha">Junio 2020</span>
         </div>
@@ -123,52 +122,28 @@
         </div>
       </div>
 
-        <div class="slide-card" id="slide-4">
-        <img src="img/bg/proyectoos.jpg" alt="Fashion Drive contrató nuestros servicios.">
+      <div class="slide-card" id="slide-4">
+        <img src="img/bg/proyectoos.jpg" alt="Muchos más proyectos">
         <div class="overlay">
           <h4>Mucho más...</h4>
-          <p>American Solutions Group..</p>
+          <p>American Solutions Group...</p>
           <span class="fecha">Mayo 2022</span>
         </div>
       </div>
-      
-    </div>
 
-    <div class="slider-nav">
-      <a href="#slide-1"></a>
-      <a href="#slide-2"></a>
-      <a href="#slide-3"></a>
     </div>
   </div>
 </section>
 
-
-<!-- asociados-->>
-<section class="clients" id="clientes">
-  <div class="clients-container">
-    <h2>Asociados de <span>American Solutions Group</span></h2>
-    <p class="clients-subtitle">
-      Hemos trabajado con empresas fuertes como <strong>RompeRenta</strong> y constructoras locales 
-      que respaldan nuestra eficiencia y servicio confiable.
-    </p>
-
-    <div class="clients-logos">
-      <div class="logo-box">
-        <img src="img/bg/romperenta.jpg" alt="RompeRenta.png">
-      </div>
-      
-    </div>
-  </div>
-</section>
 
 
 <section class="final-cta">
   <div class="cta-content">
     <h2>Lideres en soluciones de construcción. </h2>
     <p>
-      ¿Listo para lograr tus proyectos? Renta tu maquinaria hoy mismo y recíbela sin demoras.
+      No tengas miedo a alcanzar tus metas, te esperamos.
     </p>
-    <a href="https://api.whatsapp.com/send?phone=5218118670504&text&context=AffSo7TQwb7nCbeH0nYbUxT53PY5nlR-Gq6VsEplV0Jr5JKUCCu3XPp3PRvRZcOe9N1AEuoZkiFfJjFivdo1NGhU8gct3zYwEMqkyOzV1XFM1QJx8nPFuUj46SCSScClXvXdQl1AXkuE2tUqKJeaxo8jjw&source&app=facebook" class="cta-btn">Contactanos.</a>
+    <a href="https://api.whatsapp.com/send?phone=5218118670504&text&context=AffSo7TQwb7nCbeH0nYbUxT53PY5nlR-Gq6VsEplV0Jr5JKUCCu3XPp3PRvRZcOe9N1AEuoZkiFfJjFivdo1NGhU8gct3zYwEMqkyOzV1XFM1QJx8nPFuUj46SCSScClXvXdQl1AXkuE2tUqKJeaxo8jjw&source&app=facebook" class="cta-btn">Contacta ya</a>
   </div>
 </section>
 
@@ -194,14 +169,6 @@
       </ul>
     </div>
 
-    <div class="footer-links">
-      <h3>Secciones</h3>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="https://api.whatsapp.com/send?phone=5218118670504&text&context=AffSo7TQwb7nCbeH0nYbUxT53PY5nlR-Gq6VsEplV0Jr5JKUCCu3XPp3PRvRZcOe9N1AEuoZkiFfJjFivdo1NGhU8gct3zYwEMqkyOzV1XFM1QJx8nPFuUj46SCSScClXvXdQl1AXkuE2tUqKJeaxo8jjw&source&app=facebook">Contacto</a></li>
-      </ul>
-    </div>
-
     <div class="footer-social">
       <h3>Síguenos</h3>
       <ul>
@@ -216,5 +183,6 @@
     <p>&copy; 2025 American Solutions Group. Todos los derechos reservados.</p>
   </div>
 </footer>
+<script src="menu.js"></script>
 </body>
 </html>
