--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <nav class="nav-links">
         <a href="index.html">Home</a>
       <a href="index.html" class="logo">American Solutions <span>Group</span></a>
-        <a href="https://api.whatsapp.com/send?phone=5218118670504&text&context=AffSo7TQwb7nCbeH0nYbUxT53PY5nlR-Gq6VsEplV0Jr5JKUCCu3XPp3PRvRZcOe9N1AEuoZkiFfJjFivdo1NGhU8gct3zYwEMqkyOzV1XFM1QJx8nPFuUj46SCSScClXvXdQl1AXkuE2tUqKJeaxo8jjw&source&app=facebook" >Contacto</a>
+        <a href="https://api.whatsapp.com/send?phone=8117389778&text&context=AffSo7TQwb7nCbeH0nYbUxT53PY5nlR-Gq6VsEplV0Jr5JKUCCu3XPp3PRvRZcOe9N1AEuoZkiFfJjFivdo1NGhU8gct3zYwEMqkyOzV1XFM1QJx8nPFuUj46SCSScClXvXdQl1AXkuE2tUqKJeaxo8jjw&source&app=facebook" >Contacto</a>
       </nav>
     </div>
     
@@ -163,12 +163,11 @@
     <div class="footer-contact">
       <h3>Contacto</h3>
       <ul>
-        <li>Tel: <a href="tel:8118670504">+52 1 81 1867 0504</a></li>
+        <li>Tel: <a href="tel:8117389778">+52 81 1738 9778</a></li>
         <li>Email: <a href="mailto:contacto@americansolutions.com.mx">contacto@maquinariaasg.com</a></li>
-        <li>WhatsApp: <a href="https://api.whatsapp.com/send?phone=5218118670504&text&context=AffSo7TQwb7nCbeH0nYbUxT53PY5nlR-Gq6VsEplV0Jr5JKUCCu3XPp3PRvRZcOe9N1AEuoZkiFfJjFivdo1NGhU8gct3zYwEMqkyOzV1XFM1QJx8nPFuUj46SCSScClXvXdQl1AXkuE2tUqKJeaxo8jjw&source&app=facebook">Enviar mensaje</a></li>
+        <li>WhatsApp: <a href="https://api.whatsapp.com/send?phone=528117389778&text&context=AffSo7TQwb7nCbeH0nYbUxT53PY5nlR-Gq6VsEplV0Jr5JKUCCu3XPp3PRvRZcOe9N1AEuoZkiFfJjFivdo1NGhU8gct3zYwEMqkyOzV1XFM1QJx8nPFuUj46SCSScClXvXdQl1AXkuE2tUqKJeaxo8jjw&source&app=facebook">Enviar mensaje</a></li>
       </ul>
     </div>
-
     <div class="footer-social">
       <h3>Síguenos</h3>
       <ul>
